--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout your repository using git
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903
       - name: Install, build, and upload your site
-        uses: withastro/action@v3
+        uses: withastro/action@77fad83
         with:
           # path: . # The root location of your Astro project inside the repository. (optional)
           node-version: 24.2.0 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
@@ -38,4 +38,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@d6db901
